--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div style="display: flex;">
-        <a href="/lftc/atividadeRegex/index.html">Regex</a>
+        <a href="/atividadeRegex/index.html">Regex</a>
+        <a href="/atividadeGramaticaRegular/index.html">Gramática Regular</a>
     </div>
 </body>
 </html>
