--- a/atividadeRegex/index.html
+++ b/atividadeRegex/index.html
@@ -14,12 +14,12 @@
     <h1>Verificador de expressões regulares</h1>
     <h2>Guilherme Tomiasi & Willian Murayama</h2>
   </header>
-
   <article>
     <label for="input_regex">Expressão regular</label>
     <input id="input_regex"></input>
     <label for="input_test">Texto verificado</label>
     <input id="input_test"></input>
+    <a href="../index.html">Voltar ao início</a>
     <script src="script.js"></script>
   </article>
 </body>
