--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -1,48 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Regex</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="reset.css"
+    />
+    <link
+      rel="stylesheet"
+      href="style.css"
+    />
+    <link
+      rel="stylesheet"
+      href="tree.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Regex</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="tree.css">
-</head>
-
-<body>
-  <header>
-    <h1>Simulador de Gramáticas Regulares </h1>
-    <h2>Guilherme Tomiasi & Willian Murayama</h2>
-    <h3>Apenas gramáticas lineares à direita suportadas</h3>
-  </header>
-  <article>
-    <section class="row">
-      <div>
-        <h1>Entrada:</h1>
-        <input id="user-input" type="text" placeholder="λ" />
-      </div>
-      <button onclick="validateInput()">Validar</button>
-    </section>
-    <section id="rules">
-      <div class="row">
-        <h1>Regras:</h1>
-        <button id="add-rule">Adicionar regra</button>
-      </div>
-      <ul id="list">
-        <li class="rule">
-          <input type="text" value="S" readonly />
-          <span>-></span>
-          <input type="text" placeholder="λ" oninput="validateAllRules()" />
-          <button disabled>Remover regra</button>
-        </li>
-      </ul>
-      <div id="result-tree"></div>
-    </section>
-  </article>
-
-  <script src="tiny.js"></script>
-  <script src="grammar.js"></script>
-</body>
-
+  <body>
+    <header>
+      <h1>Simulador de Gramáticas Regulares</h1>
+      <h2>Guilherme Tomiasi & Willian Murayama</h2>
+      <h3>Apenas gramáticas lineares à direita suportadas</h3>
+    </header>
+    <article>
+      <section class="row">
+        <div>
+          <h1>Entrada:</h1>
+          <input
+            id="user-input"
+            type="text"
+            placeholder="λ"
+          />
+        </div>
+        <button onclick="validateInput()">Validar</button>
+      </section>
+      <section id="rules">
+        <div class="row">
+          <h1>Regras:</h1>
+          <button id="add-rule">Adicionar regra</button>
+        </div>
+        <ul id="list">
+          <li class="rule">
+            <input
+              type="text"
+              value="S"
+              readonly
+            />
+            <span>-></span>
+            <input
+              type="text"
+              placeholder="λ"
+              oninput="validateAllRules()"
+            />
+            <button disabled>Remover regra</button>
+          </li>
+        </ul>
+        <div id="result-tree"></div>
+      </section>
+      <a href="../index.html">Voltar ao início</a>
+    </article>
+    <script src="tiny.js"></script>
+    <script src="grammar.js"></script>
+  </body>
 </html>
