--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Linguagens Formais e Teoria da Computação</title>
-</head>
-<body>
-    <div style="display: flex;">
+    <link
+      rel="stylesheet"
+      href="style.css"
+    />
+  </head>
+  <body>
+    <h1>Linguagens Formais e Teoria da Computação</h1>
+    <h2>Guilherme Tomiasi & Willian Murayama</h2>
+    <div class="container">
+      <div class="centered-div">
         <a href="/atividadeRegex/index.html">Regex</a>
+      </div>
+      <div class="centered-div">
         <a href="/atividadeGramaticaRegular/index.html">Gramática Regular</a>
+      </div>
+      <div class="centered-div">
+        <a href="/atividadeAutomatoFinito/index.html">Automato Finito</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
