--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <h2>Guilherme Tomiasi & Willian Murayama</h2>
     <div class="container">
       <div class="centered-div">
-        <a href="lftc/atividadeRegex/index.html">Regex</a>
+        <a href="atividadeRegex/index.html">Regex</a>
       </div>
       <div class="centered-div">
-        <a href="lftc/atividadeGramaticaRegular/index.html">Gramática Regular</a>
+        <a href="atividadeGramaticaRegular/index.html">Gramática Regular</a>
       </div>
       <div class="centered-div">
-        <a href="lftc/atividadeAutomatoFinito/index.html">Automato Finito</a>
+        <a href="atividadeAutomatoFinito/index.html">Automato Finito</a>
       </div>
     </div>
   </body>
