--- a/atividadeRegex/index.html
+++ b/atividadeRegex/index.html
@@ -15,11 +15,15 @@
     <h2>Guilherme Tomiasi & Willian Murayama</h2>
   </header>
   <article>
-    <label for="input_regex">Expressão regular</label>
-    <input id="input_regex"></input>
-    <label for="input_test">Texto verificado</label>
-    <input id="input_test"></input>
-    <a href="../index.html">Voltar ao início</a>
+
+      <label for="input_regex">Expressão regular</label>
+      <input id="input_regex"></input>
+
+      <label for="input_test">Texto verificado</label>
+      <input id="input_test"></input>
+
+    <!-- <a href="../index.html">Voltar ao início</a> -->
+    <button onclick="window.location.href='../index.html'" class="button" style="margin-top: 10px;">Voltar ao início</button>
     <script src="script.js"></script>
   </article>
 </body>
