--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Regex</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -13,18 +10,15 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
-      href="reset.css"
     />
-    <link
-      rel="stylesheet"
-      href="style.css"
-    />
-    <link
-      rel="stylesheet"
-      href="tree.css"
-    />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tree.css" />
   </head>
 
   <body>
@@ -37,11 +31,7 @@
       <section class="row">
         <div>
           <h1>Entrada:</h1>
-          <input
-            id="user-input"
-            type="text"
-            placeholder="λ"
-          />
+          <input id="user-input" type="text" placeholder="λ" />
         </div>
         <button onclick="validateInput()">Validar</button>
       </section>
@@ -52,23 +42,24 @@
         </div>
         <ul id="list">
           <li class="rule">
-            <input
-              type="text"
-              value="S"
-              readonly
-            />
-            <span>-></span>
-            <input
-              type="text"
-              placeholder="λ"
-              oninput="validateAllRules()"
-            />
+            <input type="text" value="S" readonly />
+            <!-- <span>-></span> -->
+            <svg width="30px" height="30px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8 6L8 2L10 2L16 8L10 14L8 14L8 10L-1.74845e-07 10L-3.01991e-07 6L8 6Z" fill="#000000"/>
+              </svg>
+            <input type="text" placeholder="λ" oninput="validateAllRules()" />
             <button disabled>Remover regra</button>
           </li>
         </ul>
         <div id="result-tree"></div>
       </section>
-      <a href="../index.html">Voltar ao início</a>
+      <button
+        onclick="window.location.href='../index.html'"
+        class="button"
+        style="margin-top: 10px;font-family: inter-regular;font-size: 12;"
+      >
+        Voltar ao início
+      </button>
     </article>
     <script src="tiny.js"></script>
     <script src="grammar.js"></script>
