--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -7,12 +7,12 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Regex</title>
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="reset.css"
@@ -35,7 +35,7 @@
     </header>
     <article>
       <section class="row">
-        <div>
+        <div class="container">
           <h1>Entrada:</h1>
           <input
             id="user-input"
@@ -43,7 +43,7 @@
             placeholder="λ"
           />
         </div>
-        <button onclick="validateInput()">Validar</button>
+        <button onclick="validateInput()" style="background-color: #ADD8E6;">Validar</button>
       </section>
       <section id="rules">
         <div class="row">
