Feat: button CSS

--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -63,7 +63,7 @@
               placeholder="λ"
               oninput="validateAllRules()"
             />
-            <button disabled>Remover regra</button>
+            <button disabled style="background-color: #FF7F7F;">Remover regra</button>
           </li>
         </ul>
         <div id="result-tree"></div>
