Feat: CSS to other pages

--- a/atividadeAutomatoFinito/index.html
+++ b/atividadeAutomatoFinito/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      href="style.css"
+    />
     <title>Automato Finito</title>
   </head>
   <body>
@@ -12,14 +18,22 @@
       <h2>Guilherme Tomiasi & Willian Murayama</h2>
     </header>
     <div>
-      <button onclick="addNewNode()">Add New Node</button>
-
+      <button onclick="addNewNode()">Adicionar estado</button>
+      <button onclick="addNewNode()">Adicionar estado</button>
+    </div>
+    <div>
       <div
         id="myDiagramDiv"
         style="width: 400px; height: 600px; background-color: #dae4e4"
       ></div>
     </div>
-    <a href="../index.html">Voltar ao início</a>
+    <button
+      onclick="window.location.href='../index.html'"
+      class="button"
+    >
+      Voltar ao início
+    </button>
+
     <script src="https://cdn.jsdelivr.net/npm/gojs/release/go.js"></script>
     <script src="script.js"></script>
   </body>
