--- a/index.html
+++ b/index.html
@@ -17,13 +17,33 @@
     <h2>Guilherme Tomiasi & Willian Murayama</h2>
     <div class="container">
       <div class="centered-div">
-        <a href="atividadeRegex/index.html">Regex</a>
+        <button
+          onclick="window.location.href='atividadeRegex/index.html'"
+          class="button"
+          style="margin-top: 10px"
+        >
+        Expressão regular
+        </button>
       </div>
       <div class="centered-div">
-        <a href="atividadeGramaticaRegular/index.html">Gramática Regular</a>
+    
+        <button
+          onclick="window.location.href='atividadeGramaticaRegular/index.html'"
+          class="button"
+          style="margin-top: 10px"
+        >
+        Gramática Regular
+        </button>
       </div>
       <div class="centered-div">
-        <a href="atividadeAutomatoFinito/index.html">Automato Finito</a>
+      
+        <button
+          onclick="window.location.href='atividadeAutomatoFinito/index.html'"
+          class="button"
+          style="margin-top: 10px"
+        >
+          Automato Finito
+        </button>
       </div>
     </div>
   </body>
