--- a/index.html
+++ b/index.html
@@ -2,45 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linguagens Formais e Teoria da Computação</title>
-    <link
-      rel="stylesheet"
-      href="style.css"
-    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Linguagens Formais e Teoria da Computação</h1>
-    <h2>Guilherme Tomiasi & Willian Murayama</h2>
+      <span class="title">Linguagens Formais e Teoria da Computação</span>
+      <span class="name">Guilherme Tomiasi & Willian Murayama</span>
     <div class="container">
-      <div class="centered-div">
+      <div class="content">
         <button
           onclick="window.location.href='atividadeRegex/index.html'"
           class="button"
-          style="margin-top: 10px"
         >
-        Expressão regular
+          Expressão regular
         </button>
-      </div>
-      <div class="centered-div">
-    
         <button
           onclick="window.location.href='atividadeGramaticaRegular/index.html'"
           class="button"
-          style="margin-top: 10px"
         >
-        Gramática Regular
+          Gramática Regular
         </button>
-      </div>
-      <div class="centered-div">
-      
         <button
           onclick="window.location.href='atividadeAutomatoFinito/index.html'"
           class="button"
-          style="margin-top: 10px"
         >
           Automato Finito
         </button>
