--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -12,38 +12,41 @@
 
 <body>
   <header>
-    <h1>Simulador de Gramáticas Regulares</h1>
-    <h2>Guilherme Tomiasi & Willian Murayama</h2>
+    <span class="title">Linguagens Formais e Teoria da Computação</span>
+    <span class="name">Guilherme Tomiasi & Willian Murayama</span>
     <h3>Apenas gramáticas lineares à direita suportadas</h3>
   </header>
   <article>
-    <section class="row">
       <div class="container">
-        <h1>Entrada:</h1>
-        <input id="user-input" type="text" placeholder="λ" />
+        <div class="content">
+          <h1>Entrada:</h1>
+          <input id="user-input" type="text" placeholder="λ" />
+          <button onclick="validateInput()" style="background-color: #ADD8E6;">Validar</button>
+        </div>
+        <div class="content">
+          <h1>Regras:</h1>
+          <button id="add-rule" style="background-color: #D3D3D3;">Adicionar regra</button>
+        </div>
+        <div class="content">
+          <ul id="list">
+            <li class="rule">
+              <input type="text" value="S" readonly />
+              <svg width="30px" height="30px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8 6L8 2L10 2L16 8L10 14L8 14L8 10L-1.74845e-07 10L-3.01991e-07 6L8 6Z" fill="#000000" />
+              </svg>
+              <input type="text" placeholder="λ" oninput="validateAllRules()" />
+              <button disabled>Remover regra</button>
+            </li>
+          </ul>
+        <section id="result"></section>
+        </div>
+        <button onclick="window.location.href='../index.html'" class="button" style="margin: 24px 0; font-size: 12;">
+          Voltar ao início
+        </button>
       </div>
-      <button onclick="validateInput()" style="background-color: #ADD8E6;">Validar</button>
-    </section>
-    <section id="rules">
-      <div class="row">
-        <h1>Regras:</h1>
-        <button id="add-rule" style="background-color: #D3D3D3;">Adicionar regra</button>
-      </div>
-      <ul id="list">
-        <li class="rule">
-          <input type="text" value="S" readonly />
-          <svg width="30px" height="30px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M8 6L8 2L10 2L16 8L10 14L8 14L8 10L-1.74845e-07 10L-3.01991e-07 6L8 6Z" fill="#000000" />
-          </svg>
-          <input type="text" placeholder="λ" oninput="validateAllRules()" />
-          <button disabled>Remover regra</button>
-        </li>
-      </ul>
-    </section>
-    <section id="result"></section>
-    <button onclick="window.location.href='../index.html'" class="button" style="margin: 24px 0; font-size: 12;">
-      Voltar ao início
-    </button>
+      
+
+
   </article>
   <script src="tiny.js"></script>
   <script src="grammar.js"></script>
