--- a/atividadeRegex/index.html
+++ b/atividadeRegex/index.html
@@ -28,18 +28,14 @@
     </div>
     <div class="content">
         <span style="font-weight: bold; font-size: 16pt;">Conversão</span>
-        <button onclick="window.location.href='../index.html'" class="button" >Gramatica regular</button>
-        <button onclick="window.location.href='../index.html'" class="button"
+        <button onclick="" class="button" >Gramatica regular</button>
+        <button onclick="" class="button"
         >Automato finito</button>
         <button onclick="window.location.href='../index.html'" class="button" >Voltar ao
         início</button>
     </div>
   </div>
   <article>
-
-
-
-
     <script src="script.js"></script>
   </article>
 </body>
