--- a/atividadeAutomatoFinito/index.html
+++ b/atividadeAutomatoFinito/index.html
@@ -2,14 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <link
-      rel="stylesheet"
-      href="style.css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="../lib/jsplumb-browser-ui.umd.js"></script>
     <title>Automato Finito</title>
   </head>
   <body>
@@ -22,19 +17,25 @@
       <button onclick="addNewNode()">Adicionar estado</button>
     </div>
     <div>
-      <div
-        id="myDiagramDiv"
-        style="width: 400px; height: 600px; background-color: #dae4e4"
-      ></div>
+      <div id="myDiagramDiv" style="position: relative;">
+        <div
+          id="circle1"
+          style="position: absolute; padding: 20px; border-width: 1px;border: solid 2px red;border-radius: 100%"
+        >
+          a
+        </div>
+        <div
+          id="circle2"
+          style="position: absolute; padding: 50px; border-width: 1px;border: solid 2px red;border-radius: 100%;"
+        >
+          b
+        </div>
+      </div>
     </div>
-    <button
-      onclick="window.location.href='../index.html'"
-      class="button"
-    >
+    <button onclick="window.location.href='../index.html'" class="button">
       Voltar ao início
     </button>
 
-    <script src="https://cdn.jsdelivr.net/npm/gojs/release/go.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
