--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -15,6 +15,9 @@
     <h1>Simulador de Gramáticas Regulares</h1>
     <h2>Guilherme Tomiasi & Willian Murayama</h2>
     <h3>Apenas gramáticas lineares à direita suportadas</h3>
+    <button onclick="window.location.href='../index.html'" class="button" style="margin: 24px 0; font-size: 12;">
+      Voltar ao início
+    </button>
   </header>
   <article>
     <section class="row">
