--- a/atividadeRegex/index.html
+++ b/atividadeRegex/index.html
@@ -21,9 +21,22 @@
 
       <label for="input_test">Texto verificado</label>
       <input id="input_test"></input>
+    </div>
+    </div>
+    <div class="content">
+        <span style="font-weight: bold; font-size: 16pt;">Conversão</span>
+        <button onclick="window.location.href='../index.html'" class="button" >Gramatica regular</button>
+        <button onclick="window.location.href='../index.html'" class="button"
+        >Automato finito</button>
+        <button onclick="window.location.href='../index.html'" class="button" >Voltar ao
+        início</button>
+    </div>
+  </div>
+  <article>
 
-    <!-- <a href="../index.html">Voltar ao início</a> -->
-    <button onclick="window.location.href='../index.html'" class="button" style="margin-top: 10px;">Voltar ao início</button>
+
+
+
     <script src="script.js"></script>
   </article>
 </body>
