--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -43,10 +43,7 @@
         </li>
       </ul>
     </section>
-    <section id="result"></section>
-    <button onclick="window.location.href='../index.html'" class="button" style="margin: 24px 0; font-size: 12;">
-      Voltar ao início
-    </button>
+    <section id="result" style="margin-bottom: 100px;"></section>
   </article>
   <script src="tiny.js"></script>
   <script src="grammar.js"></script>
