Wip: finite automaton

--- a/atividadeAutomatoFinito/index.html
+++ b/atividadeAutomatoFinito/index.html
@@ -22,6 +22,7 @@
       </div>
       <div>
         <button onclick="addNode()">Adicionar estado</button>
+        <button onclick="getStructure()">Executar</button>
       </div>
     </div>
 
