--- a/index.html
+++ b/index.html
@@ -2,28 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Linguagens Formais e Teoria da Computação</title>
-    <link
-      rel="stylesheet"
-      href="style.css"
-    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Linguagens Formais e Teoria da Computação</h1>
     <h2>Guilherme Tomiasi & Willian Murayama</h2>
     <div class="container">
       <div class="centered-div">
-        <a href="atividadeRegex/index.html">Regex</a>
+        <a href="atividadeRegex/index.html">Expressão regular</a>
       </div>
       <div class="centered-div">
         <a href="atividadeGramaticaRegular/index.html">Gramática Regular</a>
       </div>
       <div class="centered-div">
-        <a href="atividadeAutomatoFinito/index.html">Automato Finito</a>
+        <a href="atividadeAutomatoFinito/index.html">Autômato Finito</a>
       </div>
     </div>
   </body>
