--- a/atividadeAutomatoFinito/index.html
+++ b/atividadeAutomatoFinito/index.html
@@ -51,8 +51,8 @@
   <button onclick="window.location.href='../index.html'" class="button">
     Voltar ao início
   </button>
-  <script src="automata.js"></script>
   <script src="../lib/jsplumb-browser-ui.umd.js"></script>
+  <script src="../lib/automata.js"></script>
   <script src="script.js"></script>
 </body>
 
