Wip: grammar to automata

--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -70,9 +70,13 @@
       </section>
       <section id="result" style="margin-bottom: 100px"></section>
     </article>
-    
+    <div id="canvasAndResults">
+      <div id="myDiagramDiv"></div>
+      <div id="configurations"></div>
+    </div>
     <script src="tiny.js"></script>
     <script src="grammar.js"></script>
+    <script src="../lib/jsplumb-browser-ui.umd.js"></script>
     <script src="regex.js"></script>
   </body>
 </html>
