wip: regex to grammar conversion, saving in session storage

--- a/atividadeRegex/index.html
+++ b/atividadeRegex/index.html
@@ -28,7 +28,7 @@
       <div class="content" style="padding-left: 20px">
         <span style="font-weight: bold; font-size: 16pt">Conversão</span>
         <div>
-          <button id="generateGrammar" class="button">Gramatica regular</button>
+          <button id="generateGrammar" class="button" onclick="generateGrammar()">Gramatica regular</button>
           <button id="automaton" class="button">Automato finito</button>
         </div>
 
@@ -48,8 +48,8 @@
         
       </div>
       <div style="font-size: 20pt" id="result"></div>
+      <script src="../lib/convertions.js"></script>
       <script src="script.js"></script>
-      <script src="grammar.js"></script>
     </article>
   </body>
 </html>
