--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -74,9 +74,8 @@
       <div id="myDiagramDiv"></div>
       <div id="configurations"></div>
     </div>
-    <script src="tiny.js"></script>
+    <script src="../lib/grammar.js"></script>
     <script src="grammar.js"></script>
     <script src="../lib/jsplumb-browser-ui.umd.js"></script>
-    <script src="regex.js"></script>
   </body>
 </html>
