Wip: grammar to regex

--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -28,7 +28,7 @@
         </div>
         <div>
           <span style="font-weight: bold; font-size: 16pt">Conversão: </span>
-          <button>Regex</button>
+          <button onclick="generateRegex()">Regex</button>
           <button>Automato Finito</button>
         </div>
       </div>
@@ -76,6 +76,8 @@
     </div>
     <script src="../lib/grammar.js"></script>
     <script src="grammar.js"></script>
+
+    <script src="../lib/convertions.js"></script>
     <script src="../lib/jsplumb-browser-ui.umd.js"></script>
   </body>
 </html>
