--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -29,7 +29,7 @@
         <div>
           <span style="font-weight: bold; font-size: 16pt">Conversão: </span>
           <button onclick="generateRegex()">Regex</button>
-          <button>Automato Finito</button>
+          <button onclick="generateAutomata()">Automato Finito</button>
         </div>
       </div>
       <section class="row">
