--- a/atividadeAutomatoFinito/index.html
+++ b/atividadeAutomatoFinito/index.html
@@ -62,7 +62,9 @@
       </div>
     </div>
 
+
     <script src="../lib/jsplumb-browser-ui.umd.js"></script>
+    <script src="../lib/convertions.js"></script>
     <script src="../lib/automata.js"></script>
     <script src="script.js"></script>
   </body>
