Feat: link to all convertions

--- a/atividadeAutomatoFinito/index.html
+++ b/atividadeAutomatoFinito/index.html
@@ -52,8 +52,8 @@
     <div>
       <div>
         <span style="font-weight: bold; font-size: 16pt">Conversão: </span>
-        <button>Regex</button>
-        <button>Automato Finito</button>
+        <button onclick="automataToRegex()">Regex</button>
+        <button onclick="automataToGrammar()">Gramática regular</button>
       </div>
       <div>
         <button onclick="window.location.href='../index.html'">
