--- a/atividadeAutomatoFinito/index.html
+++ b/atividadeAutomatoFinito/index.html
@@ -61,11 +61,11 @@
         </button>
       </div>
     </div>
-
-
     <script src="../lib/jsplumb-browser-ui.umd.js"></script>
     <script src="../lib/convertions.js"></script>
     <script src="../lib/automata.js"></script>
     <script src="script.js"></script>
+    <script src="grammar.js"></script>
+    <script src="regex.js"></script>
   </body>
 </html>
