--- a/atividadeGramaticaRegular/index.html
+++ b/atividadeGramaticaRegular/index.html
@@ -75,9 +75,10 @@
       <div id="configurations"></div>
     </div>
     <script src="../lib/grammar.js"></script>
-    <script src="grammar.js"></script>
-
     <script src="../lib/convertions.js"></script>
     <script src="../lib/jsplumb-browser-ui.umd.js"></script>
+    <script src="grammar.js"></script>
+    <script src="regex.js"></script>
+    <script src="automata.js"></script>
   </body>
 </html>
