--- a/atividadeRegex/index.html
+++ b/atividadeRegex/index.html
@@ -50,6 +50,8 @@
       <div style="font-size: 20pt" id="result"></div>
       <script src="../lib/convertions.js"></script>
       <script src="script.js"></script>
+      <script src="grammar.js"></script>
+      <script src="automata.js"></script>
     </article>
   </body>
 </html>
