Feat: regex to automata

--- a/atividadeRegex/index.html
+++ b/atividadeRegex/index.html
@@ -29,7 +29,7 @@
         <span style="font-weight: bold; font-size: 16pt">Conversão</span>
         <div>
           <button id="generateGrammar" class="button" onclick="generateGrammar()">Gramatica regular</button>
-          <button id="automaton" class="button">Automato finito</button>
+          <button id="automaton" class="button" onclick="generateAutomata()">Automato finito</button>
         </div>
 
         <div>
