Feat: integration with jPlumb

--- a/atividadeMaquinaTuring/index.html
+++ b/atividadeMaquinaTuring/index.html
@@ -75,5 +75,6 @@
     <script src="../lib/jsplumb-browser-ui.umd.js"></script>
     <script src="../lib/convertions.js"></script>
     <script src="script.js"></script>
+    <script src="../lib/turing.js"></script>
   </body>
 </html>
