--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <div class="centered-div">
         <a href="atividadeAutomatoFinito/index.html">Autômato Finito</a>
       </div>
+      <div class="centered-div">
+        <a href="atividadeMaquinaTuring/index.html">Máquina de Turing
+        </a>
+      </div>
     </div>
   </body>
 </html>
