Feat: Turing tape

--- a/atividadeMaquinaTuring/index.html
+++ b/atividadeMaquinaTuring/index.html
@@ -30,6 +30,8 @@
         <button onclick="addNode()">Adicionar estado</button>
       </div>
     </div>
+    <label for="">Fita da máquina: </label>
+  <div style="font-size: 20pt;" id="turingTape"></div>
     <div id="automataReadingSettingsDiv" style="display: none">
       <div id="initialStateDiv">
         <label for="initialState">Estado inicial: </label>
