--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <a href="atividadeAutomatoFinito/index.html">Autômato Finito</a>
       </div>
       <div class="centered-div">
-        <a href="atividadeMaquinaTuring/index.html">Máquina de Turing
-        </a>
+        <a href="atividadeMaquinaTuring/index.html">Máquina de Turing</a>
       </div>
     </div>
   </body>
